--- a/analyse-student/src/main/resources/templates/layout/_layout.html
+++ b/analyse-student/src/main/resources/templates/layout/_layout.html
@@ -2,7 +2,16 @@
 <body class="fixed-sidebar full-height-layout gray-bg" style="overflow:hidden">
 <div id="wrapper">
     <!--左侧导航开始-->
-    @include("/common/_left.html") {}
+    <nav class="navbar-default navbar-static-side" role="navigation">
+        <div class="nav-close"><i class="fa fa-times-circle"></i>
+        </div>
+        <div class="sidebar-collapse">
+            <ul class="nav" id="side-menu">
+            @include("/common/_left_head.html") {}
+            @include("/common/_left_menu.html") {}
+            </ul>
+        </div>
+    </nav>
     <!--左侧导航结束-->
 
     <!--右侧开始-->
