--- a/analyse-student/src/main/resources/templates/common/_left_menu.html
+++ b/analyse-student/src/main/resources/templates/common/_left_menu.html
@@ -1,27 +1,8 @@
 <li>
-    <a href="#">
+    <a class="J_menuItem" href="index_content.html">
         <i class="fa fa-home"></i>
-        <span class="nav-label">主页</span>
-        <span class="fa arrow"></span>
+        <span class="nav-label">首页</span>
     </a>
-    <ul class="nav nav-second-level">
-        <li>
-            <a class="J_menuItem" href="index_v1.html" data-index="0">主页示例一</a>
-        </li>
-        <li>
-            <a class="J_menuItem" href="index_v2.html">主页示例二</a>
-        </li>
-        <li>
-            <a class="J_menuItem" href="index_v3.html">主页示例三</a>
-        </li>
-        <li>
-            <a class="J_menuItem" href="index_v4.html">主页示例四</a>
-        </li>
-        <li>
-            <a href="index_v5.html" target="_blank">主页示例五</a>
-        </li>
-    </ul>
-
 </li>
 <li>
     <a class="J_menuItem" href="layouts.html"><i class="fa fa-columns"></i> <span class="nav-label">布局</span></a>
