--- a/analyse-student/src/main/resources/templates/common/_top.html
+++ b/analyse-student/src/main/resources/templates/common/_top.html
@@ -1,4 +1,3 @@
-
     <div class="row border-bottom">
         <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
             <div class="navbar-header"><a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i> </a>
@@ -100,7 +99,7 @@
         </button>
         <nav class="page-tabs J_menuTabs">
             <div class="page-tabs-content">
-                <a href="javascript:;" class="active J_menuTab" data-id="index_v1.html">首页</a>
+                <a href="javascript:;" class="active J_menuTab" data-id="index_content.html">首页</a>
             </div>
         </nav>
         <button class="roll-nav roll-right J_tabRight"><i class="fa fa-forward"></i>
@@ -121,4 +120,3 @@
         </div>
         <a href="login.html" class="roll-nav roll-right J_tabExit"><i class="fa fa fa-sign-out"></i> 退出</a>
     </div>
-
