--- a/analyse-student/src/main/resources/templates/index.html
+++ b/analyse-student/src/main/resources/templates/index.html
@@ -1,3 +1,3 @@
 @layout("/layout/_layout.html"){
-<iframe class="J_iframe" name="iframe0" width="100%" height="100%" src="index_v2.html?v=4.0" frameborder="0" data-id="index_v2.html" seamless></iframe>
+<iframe class="J_iframe" name="iframe0" width="100%" height="100%" src="index_content.html" frameborder="0" data-id="index_content.html" seamless></iframe>
 @}
