--- a/analyse-student/src/main/resources/templates/layout/_layout.html
+++ b/analyse-student/src/main/resources/templates/layout/_layout.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 @include("/common/_head.html") {}
 <body class="fixed-sidebar full-height-layout gray-bg" style="overflow:hidden">
 <div id="wrapper">
@@ -7,8 +9,13 @@
         </div>
         <div class="sidebar-collapse">
             <ul class="nav" id="side-menu">
+            <!--左侧管理员开始-->
             @include("/common/_left_head.html") {}
+            <!--左侧管理员结束-->
+
+            <!--左侧导航菜单员开始-->
             @include("/common/_left_menu.html") {}
+            <!--左侧导航菜单员结束-->
             </ul>
         </div>
     </nav>
@@ -44,3 +51,6 @@
     <!--mini聊天窗口结束-->
 </div>
 @include("/common/_foot.html") {}
+</body>
+
+</html>
