--- a/analyse-student/src/main/resources/templates/common/_foot.html
+++ b/analyse-student/src/main/resources/templates/common/_foot.html
@@ -6,3 +6,6 @@
 <script src="/js/hplus.min.js?v=4.0.0"></script>
 <script type="text/javascript" src="/js/contabs.min.js"></script>
 <script src="/js/plugins/pace/pace.min.js"></script>
+<script src="/js/plugins/bootstrap-table/bootstrap-table.min.js"></script>
+<script src="/js/plugins/bootstrap-table/bootstrap-table-mobile.min.js"></script>
+<script src="/js/plugins/bootstrap-table/locale/bootstrap-table-zh-CN.min.js"></script>
