--- a/analyse-student/src/main/resources/templates/user/ajax_index.html
+++ b/analyse-student/src/main/resources/templates/user/ajax_index.html
@@ -1,4 +1,5 @@
-<table class="table table-striped table-hover">
+
+<table class="table table-striped table-bordered table-hover">
     <thead>
     <tr>
         <th></th>
@@ -44,4 +45,13 @@
     @}
     </tbody>
 </table>
+    <div class="col-sm-7 pull-right text-right">${pages}</div>
 
+
+
+<script>
+    $(".pagination  a").click(function(){
+        var page = $(this).data('p');
+        ajax_get_table('search-form2',page);
+    });
+</script>
