树形菜单、表单验证相关

--- a/analyse-student/src/main/resources/templates/common/_left_menu.html
+++ b/analyse-student/src/main/resources/templates/common/_left_menu.html
@@ -1,3 +1,9 @@
+<li>
+    <a class="J_menuItem" href="/" data-index="4">
+        <i class="fa fa-home"></i>
+        <span class="nav-label">首页</span>
+    </a>
+</li>
 @for(menu in menus){
     <li>
         @if(isEmpty(menu.childFolders)){
