--- a/analyse-student/src/main/resources/templates/login.html
+++ b/analyse-student/src/main/resources/templates/login.html
@@ -7,10 +7,10 @@
         <div>
             <div>
 
-                <h1 class="logo-name">H+</h1>
+                <h1 class="logo-name">析+</h1>
 
             </div>
-            <h3>欢迎使用 H+</h3>
+            <h3>欢迎使用 ${site_title} 质量分析系统</h3>
 
             <form class="m-t" role="form" action="/loginCheck.html">
                 <div class="form-group">
