--- a/analyse-student/src/main/resources/templates/common/_content_foot.html
+++ b/analyse-student/src/main/resources/templates/common/_content_foot.html
@@ -1,6 +1,10 @@
 <script src="/js/jquery.min.js?v=2.1.4"></script>
 <script src="/js/bootstrap.min.js?v=3.3.5"></script>
+<script src="/js/jquery.nestable.js"></script>
 <script src="/js/plugins/metisMenu/jquery.metisMenu.js"></script>
+<script src="/js/plugins/validate/jquery.validate.min.js"></script>
+<script src="/js/plugins/validate/messages_zh.min.js"></script>
+<script src="/js/plugins/validate/form-validate-demo.min.js"></script>
 <script src="/js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
 <script src="/js/plugins/layer/layer.min.js"></script>
 <script src="/js/hplus.min.js?v=4.0.0"></script>
