--- a/analyse-student/src/main/resources/templates/common/_left_head.html
+++ b/analyse-student/src/main/resources/templates/common/_left_head.html
@@ -21,6 +21,6 @@
             </li>
         </ul>
     </div>
-    <div class="logo-element">H+
+    <div class="logo-element">析+
     </div>
 </li>
