--- a/analyse-student/src/main/resources/templates/layout/_layout.html
+++ b/analyse-student/src/main/resources/templates/layout/_layout.html
@@ -34,7 +34,7 @@
         <!--右侧内容结束-->
 
         <!--右侧footer开始-->
-        <div class="footer">
+        <div class="gray-bg footer">
             <div class="pull-right">&copy; 2014-2015 <a href="http://www.zi-han.net/" target="_blank">daddd</a>
             </div>
         </div>
