--- a/analyse-student/src/main/resources/templates/menu/add_menu.html
+++ b/analyse-student/src/main/resources/templates/menu/add_menu.html
@@ -1,59 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-@include("/common/_content_head.html") {}
+    @include("/common/_content_head.html") {}
+    <link href="/css/plugins/toastr/toastr.min.css" rel="stylesheet">
 </head>
 <body>
 <div class="row">
     <div class="col-sm-6">
         <div class="ibox float-e-margins">
             <div class="ibox-content">
-                <form class="form-horizontal m-t" id="signupForm">
+                <form class="form-horizontal m-t" id="menu_form">
                     <div class="form-group">
-                        <label class="col-sm-3 control-label">姓氏：</label>
+                        <label for="folder_name" class="col-sm-3 control-label">菜单名称：</label>
                         <div class="col-sm-8">
-                            <input id="firstname" name="firstname" class="form-control" type="text">
-                            <span class="help-block m-b-none"><i class="fa fa-info-circle"></i> 这里写点提示的内容</span>
+                            <input id="folder_name" name="folderName" class="form-control" type="text" required>
+                            <!--<span class="help-block m-b-none"><i class="fa fa-info-circle"></i> 这里写点提示的内容</span>-->
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-3 control-label">名字：</label>
+                        <label for="key_name" class="col-sm-3 control-label">KEY_NAME：</label>
                         <div class="col-sm-8">
-                            <input id="lastname" name="lastname" class="form-control" type="text" aria-required="true" aria-invalid="false" class="valid">
+                            <input id="key_name" name="keyName" class="form-control" type="text" required>
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-3 control-label">用户名：</label>
+                        <label for="url" class="col-sm-3 control-label">URL：</label>
                         <div class="col-sm-8">
-                            <input id="username" name="username" class="form-control" type="text" aria-required="true" aria-invalid="true" class="error">
+                            <input id="url" name="url" class="form-control" type="text">
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-3 control-label">密码：</label>
+                        <label for="ico_str" class="col-sm-3 control-label">显示小图标：</label>
                         <div class="col-sm-8">
-                            <input id="password" name="password" class="form-control" type="password">
+                            <input id="ico_str" name="icoStr" class="form-control" type="text">
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-3 control-label">确认密码：</label>
+                        <label for="parent_id" class="col-sm-3 control-label">父级菜单：</label>
                         <div class="col-sm-8">
-                            <input id="confirm_password" name="confirm_password" class="form-control" type="password">
-                            <span class="help-block m-b-none"><i class="fa fa-info-circle"></i> 请再次输入您的密码</span>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-3 control-label">E-mail：</label>
-                        <div class="col-sm-8">
-                            <input id="email" name="email" class="form-control" type="email">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-sm-8 col-sm-offset-3">
-                            <div class="checkbox">
-                                <label>
-                                    <input type="checkbox" class="checkbox" id="agree" name="agree"> 我已经认真阅读并同意《H+使用协议》
-                                </label>
-                            </div>
+                            <select class="form-control" id="parent_id" name="parentId">
+                                <option value="">请选择</option>
+                                @for(top_menu in top_menus){
+                                <option value="${top_menu.folderId}">${top_menu.folderName}</option>
+                                @}
+                            </select>
                         </div>
                     </div>
                     <div class="form-group">
@@ -68,4 +58,70 @@
 </div>
 </body>
 @include("/common/_content_foot.html") {}
+<script src="/js/plugins/toastr/toastr.min.js"></script>
+<script type="text/javascript">
+    toastr.options = {
+        "closeButton": true,
+        "debug": true,
+        "progressBar": false,
+        "positionClass": "toast-top-center",
+        "showDuration": "400",
+        "hideDuration": "1000",
+        "timeOut": "500",
+        "extendedTimeOut": "1000",
+        "showEasing": "swing",
+        "hideEasing": "linear",
+        "showMethod": "fadeIn",
+        "hideMethod": "fadeOut"
+    }
+
+
+    $.validator.setDefaults({
+        highlight: function (e) {
+            $(e).closest(".form-group").removeClass("has-success").addClass("has-error")
+        }, success: function (e) {
+            e.closest(".form-group").removeClass("has-error").addClass("has-success")
+        }, errorElement: "span", errorPlacement: function (e, r) {
+            e.appendTo(r.is(":radio") || r.is(":checkbox") ? r.parent().parent().parent() : r.parent())
+        }, errorClass: "help-block m-b-none", validClass: "help-block m-b-none"
+    }), $().ready(function () {
+        // $("#commentForm").validate();
+        var e = "<i class='fa fa-times-circle'></i> ";
+        $("#menu_form").validate({
+            rules: {
+                folderName: "required",
+                keyName: "required"
+            },
+            messages: {
+                folderName: e + "请输入菜单名称",
+                keyName: e + "请输key_name"
+            }
+        }),$('input[required]').parent().prev().append(
+            '<span style="color:red">*</span>'
+        ), $("form").submit(function () {
+                if($(".has-error").length==0){
+
+                    $.ajax({
+                        type : "POST",
+                        url:"${ctxPath}/menu/add_menu",//+tab,
+                        data : $('#menu_form').serialize(),// 你的formid
+                        success: function(data){
+                            toastr.success(data['body']);
+
+                            if(data['status']==1){
+                                setTimeout('window.location.href="/menu/index.html"',900);
+                            }
+                        }
+                    });
+                    return false;
+                }
+            });
+        // console.log($('input[required]').parent().prev().before('<span style="color:red">*</span>'))
+    });
+
+    function sleep(d){
+        for(var t = Date.now();Date.now() - t <= d;);
+    }
+
+</script>
 </html>
