Menu 添加 提示 跳转

--- a/analyse-student/src/main/resources/templates/login.html
+++ b/analyse-student/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
             </div>
             <h3>欢迎使用 ${site_title} </h3>
 
-            <form class="m-t" role="form" action="/loginCheck.html">
+            <form class="m-t" role="form" action="/login_check.html">
                 <div class="form-group">
                     <input type="input" class="form-control" name="userName" placeholder="用户名" required="">
                 </div>
