--- a/analyse-student/src/main/resources/templates/menu/index.html
+++ b/analyse-student/src/main/resources/templates/menu/index.html
@@ -35,7 +35,7 @@
             @}
         </ol>
 
-        <a href="/menu/add_menu.html" class="btn btn-sm btn-primary"><i class="fa fa-plus"></i> 添加</a>
+        <a href="${ctxPath}/menu/add_menu.html" class="btn btn-sm btn-primary"><i class="fa fa-plus"></i> 添加</a>
 
     </div>
 
