--- a/analyse-student/src/main/resources/templates/menu/edit_menu.html
+++ b/analyse-student/src/main/resources/templates/menu/edit_menu.html
@@ -3,6 +3,7 @@
 <head>
     @include("/common/_content_head.html") {}
     <link href="/css/plugins/toastr/toastr.min.css" rel="stylesheet">
+    <link href="/css/plugins/iCheck/custom.css" rel="stylesheet">
 </head>
 <body>
 <div class="row">
@@ -29,6 +30,24 @@
                             <input id="url" name="url" class="form-control" value="${menu.url}" type="text">
                         </div>
                     </div>
+
+                    <div class="form-group">
+                        <label for="url" class="col-sm-3 control-label">类型：</label>
+                        <div class="col-sm-8">
+                            <div class="radio i-checks">
+                                <label>
+                                    <input type="radio" @if(menu.folderType==1){
+                                           checked @}
+                                           value="1" name="folderType"> <i></i> 菜单</label>
+
+                                <label>
+                                    <input type="radio" @if(menu.folderType==2){
+                                           checked @}
+                                           value="2" name="folderType"> <i></i> 子权限(如：删除、编辑)</label>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="form-group">
                         <label for="ico_str" class="col-sm-3 control-label">显示小图标：</label>
                         <div class="col-sm-8">
@@ -62,6 +81,7 @@
 </body>
 @include("/common/_content_foot.html") {}
 <script src="/js/plugins/toastr/toastr.min.js"></script>
+<script src="/js/plugins/iCheck/icheck.min.js"></script>
 <script type="text/javascript">
 
     toastr.options = {
@@ -89,6 +109,7 @@
         }, errorClass: "help-block m-b-none", validClass: "help-block m-b-none"
     }), $().ready(function () {
         // $("#commentForm").validate();
+        $(".i-checks").iCheck({checkboxClass:"icheckbox_square-green",radioClass:"iradio_square-green",});
         var e = "<i class='fa fa-times-circle'></i> ";
         $("#menu_form").validate({
             rules: {
