--- a/analyse-student/src/main/resources/templates/menu/index.html
+++ b/analyse-student/src/main/resources/templates/menu/index.html
@@ -1,54 +1,49 @@
 <!DOCTYPE html>
 <html>
-@include("/common/_content_head.html") {}
-<body class="white-bg">
-<div class="wrapper wrapper-content animated fadeInRight">
-    <div class="dd" id="nestable2" style="width: 60%;margin-left: 40px;">
-        <ol class="dd-list">
-            @for(menu in menus){
-            <li class="dd-item" data-id="${menu.folderId}">
-                <span class="menu-opt-bar pull-right">
-                    <a href="${ctxPath}/menu/edit_menu.html?folderId=${menu.folderId}"><i class="glyphicon glyphicon-pencil"></i></a>
-                    &nbsp;&nbsp;
-                    <a href="${ctxPath}/menu/del_menu.html?folderId=${menu.folderId}"><i class="glyphicon glyphicon-trash"></i></a>
-                </span>
-                <div class="dd-handle">
-                    <span class="@if(menu.icoStr!=''){
-                                label
-                               @}
-                               label-info"><i class="fa ${menu.icoStr}"></i></span>${menu.folderName}
-                </div>
-                @if(!isEmpty(menu.childFolders)){
-                <ol class="dd-list">
-                    @for(child in menu.childFolders){
-                    <li class="dd-item" data-id="${child.folderId}">
+@layout("/layout/_list_layout.html"){
+        <div class="dd" id="nestable2" style="width: 60%;margin-left: 40px;">
+            <ol class="dd-list">
+                @for(menu in menus){
+                <li class="dd-item" data-id="${menu.folderId}">
                         <span class="menu-opt-bar pull-right">
-                            <a href="${ctxPath}/menu/edit_menu.html?folderId=${child.folderId}"><i class="glyphicon glyphicon-pencil"></i></a>
-                        &nbsp;&nbsp;
-                            <a href="${ctxPath}/menu/del_menu.html?folderId=${child.folderId}"><i class="glyphicon glyphicon-trash"></i></a>
+                            <a href="${ctxPath}/menu/edit_menu.html?folderId=${menu.folderId}"><i class="glyphicon glyphicon-pencil"></i></a>
+                            &nbsp;&nbsp;
+                            <a href="${ctxPath}/menu/del_menu.html?folderId=${menu.folderId}"><i class="glyphicon glyphicon-trash"></i></a>
                         </span>
-                        <div class="dd-handle">
-                            <span class="@if(child.icoStr!=''){
-                               label
-                               @}
-                             label-info"><i class="fa ${child.icoStr}"></i></span> ${child.folderName}
-                        </div>
-                    </li>
+                    <div class="dd-handle">
+                            <span class="@if(menu.icoStr!=''){
+                                        label
+                                       @}
+                                       label-info"><i class="fa ${menu.icoStr}"></i></span>${menu.folderName}
+                    </div>
+                    @if(!isEmpty(menu.childFolders)){
+                    <ol class="dd-list">
+                        @for(child in menu.childFolders){
+                        <li class="dd-item" data-id="${child.folderId}">
+                                <span class="menu-opt-bar pull-right">
+                                    <a href="${ctxPath}/menu/edit_menu.html?folderId=${child.folderId}"><i class="glyphicon glyphicon-pencil"></i></a>
+                                &nbsp;&nbsp;
+                                    <a href="${ctxPath}/menu/del_menu.html?folderId=${child.folderId}"><i class="glyphicon glyphicon-trash"></i></a>
+                                </span>
+                            <div class="dd-handle">
+                                    <span class="@if(child.icoStr!=''){
+                                       label
+                                       @}
+                                     label-info"><i class="fa ${child.icoStr}"></i></span> ${child.folderName}
+                            </div>
+                        </li>
+                        @}
+                    </ol>
                     @}
-                </ol>
+                </li>
                 @}
-            </li>
-            @}
-        </ol>
+            </ol>
 
-        <a href="${ctxPath}/menu/add_menu.html" class="btn btn-sm btn-primary"><i class="fa fa-plus"></i> 添加</a>
+            <a href="${ctxPath}/menu/add_menu.html" class="btn btn-sm btn-primary"><i class="fa fa-plus"></i> 添加</a>
 
-    </div>
-
-
-</div>
+        </div>
+@}
 </body>
-@include("/common/_content_foot.html") {}
 <script>
     $('#nestable2').nestable({
         group: 1,
