时间格式调整

--- a/analyse-student/src/main/resources/templates/user/ajax_index.html
+++ b/analyse-student/src/main/resources/templates/user/ajax_index.html
@@ -36,9 +36,9 @@
             @}
         </td>
         <td>${user.createName}</td>
-        <td>${user.createTime,"yyyy-MM-dd mm:ss"}</td>
+        <td>${user.createTime,"yyyy-MM-dd HH:mm"}</td>
         <td>${user.updateName}</td>
-        <td>${user.updateTime,"yyyy-MM-dd mm:ss"}</td>
+        <td>${user.updateTime,"yyyy-MM-dd HH:mm"}</td>
         <td></td>
     </tr>
     @}
