--- a/analyse-student/src/main/resources/templates/common/_list_foot.html
+++ b/analyse-student/src/main/resources/templates/common/_list_foot.html
@@ -3,6 +3,7 @@
 <script src="/js/jquery.nestable.js"></script>
 <script src="/js/plugins/metisMenu/jquery.metisMenu.js"></script>
 <script src="/js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+<script src="/js/plugins/sweetalert/sweetalert.min.js"></script>
 <!--<script src="/js/plugins/bootstrap-table/bootstrap-table.min.js"></script>
 <script src="/js/plugins/bootstrap-table/bootstrap-table-mobile.min.js"></script>
 <script src="/js/plugins/bootstrap-table/bootstrap-table-tree-column.js"></script>
