--- a/analyse-student/src/main/resources/templates/common/_list_head.html
+++ b/analyse-student/src/main/resources/templates/common/_list_head.html
@@ -17,4 +17,5 @@
     <link href="/css/font-awesome.min.css?v=4.4.0" rel="stylesheet">
     <link href="/css/animate.min.css" rel="stylesheet">
     <link href="/css/style.min.css?v=4.0.0" rel="stylesheet">
+    <link href="/css/plugins/sweetalert/sweetalert.css" rel="stylesheet">
 </head>
