--- a/analyse-student/src/main/resources/templates/user/index.html
+++ b/analyse-student/src/main/resources/templates/user/index.html
@@ -26,7 +26,7 @@
                             <a onclick="ajax_get_table('search-form',1)" class="btn btn-sm btn-primary"><i class="fa fa-search"></i> 搜索</a>
                             <div class="col-lg-2 pull-right text-right">
                                 <a href="${ctxPath}/user/add_user.html" class="btn btn-sm btn-primary"><i class="fa fa-plus"></i></a>
-                                <a href="" class="btn btn-sm btn-primary"><i class="fa fa-trash-o"></i></a>
+                                <span id="batch_del" class="btn btn-sm btn-primary"><i class="fa fa-trash-o"></i></span>
                             </div>
                         </div>
                         <div class="table-responsive" id="ajax_return">
@@ -57,5 +57,49 @@
             }
         });
     }
+
+    $("#batch_del").click(function () {
+        var num = $("input[class='i-checks']:checked").length;
+        if(num==0){
+            swal({type: "warning", title: "", text: "请正确选择要删除的项目。"})
+        }else {
+            swal({
+                title: "您确定要删除这 "+num+" 条信息吗",
+                text: "",
+                type: "warning",
+                showCancelButton: true,
+                confirmButtonColor: "#DD6B55",
+                confirmButtonText: "删除",
+                closeOnConfirm: false
+            }, function () {
+                var adIds = "";
+                $("input[class='i-checks']:checked").each(function(i){
+                    if(0==i){
+                        adIds = $(this).val();
+                    }else{
+                        adIds += (","+$(this).val());
+                    }
+                });
+
+                $.ajax({
+                    type : "POST",
+                    url:"${ctxPath}/user/batch_del",//+tab,
+                    data : {
+                        ids: adIds
+                    },
+                    success: function(data){
+                        if(data['status']==1){
+                            swal("成功删除"+data['body']+"条数据", "", "success")
+                            // setTimeout('window.location.href="/user/index.html"',900);
+                            ajax_get_table('search-form',cur_page);
+                        }else{
+                            swal({type: "warning", title: "", text: data['body']})
+                        }
+                    }
+                });
+                // swal("删除成功！", "您已经永久删除了这条信息。", "success")
+            })
+        }
+    });
 </script>
 </html>
