--- a/analyse-student/src/main/resources/templates/common/_form_head.html
+++ b/analyse-student/src/main/resources/templates/common/_form_head.html
@@ -19,6 +19,7 @@
     <link href="/css/style.min.css?v=4.0.0" rel="stylesheet">
     <link href="/css/plugins/toastr/toastr.min.css" rel="stylesheet">
     <link href="/css/plugins/iCheck/custom.css" rel="stylesheet">
+    <link href="/css/plugins/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css" rel="stylesheet">
    <!-- <link href="/css/plugins/bootstrap-table/bootstrap-table.css" rel="stylesheet">
     <link href="/css/plugins/bootstrap-table/bootstrap-table-tree-column.css" rel="stylesheet">-->
 </head>
