--- a/analyse-student/src/main/resources/templates/role/index.html
+++ b/analyse-student/src/main/resources/templates/role/index.html
@@ -17,7 +17,7 @@
                             <a onclick="ajax_get_table('search-form',1)" class="btn btn-sm btn-primary"><i class="fa fa-search"></i> 搜索</a>
                             <div class="col-lg-2 pull-right text-right">
                                 <a href="${ctxPath}/role/add_role.html" class="btn btn-sm btn-primary"><i class="fa fa-plus"></i></a>
-                                <span id="batch_del" class="btn btn-sm btn-primary"><i class="fa fa-trash-o"></i></span>
+                                <!--<span id="batch_del" class="btn btn-sm btn-primary"><i class="fa fa-trash-o"></i></span>-->
                             </div>
                         </div>
                         <div class="table-responsive" id="ajax_return">
