取消删除、编辑超级管理员角色和admin账号

--- a/analyse-student/src/main/resources/templates/role/ajax_index.html
+++ b/analyse-student/src/main/resources/templates/role/ajax_index.html
@@ -22,9 +22,11 @@
         <td>${role.updateName}</td>
         <td>${role.updateTime,"yyyy-MM-dd HH:mm"}</td>
         <td >
-            <a href="${ctxPath}/role/edit_role.html?roleId=${role.roleId}"><i class="glyphicon glyphicon-pencil"></i></a>
-            &nbsp;&nbsp;
-            <a href="${ctxPath}/role/del_role.html?roleId=${role.roleId}"><i class="glyphicon glyphicon-trash"></i></a>
+            @if(role.keyName != 'admin'){
+                <a href="${ctxPath}/role/edit_role.html?roleId=${role.roleId}"><i class="glyphicon glyphicon-pencil"></i></a>
+                &nbsp;&nbsp;
+                <a href="${ctxPath}/role/del_role.html?roleId=${role.roleId}"><i class="glyphicon glyphicon-trash"></i></a>
+            @}
         </td>
     </tr>
     @}
