--- a/analyse-student/src/main/resources/templates/user/ajax_index.html
+++ b/analyse-student/src/main/resources/templates/user/ajax_index.html
@@ -40,9 +40,11 @@
         <td>${user.updateName}</td>
         <td>${user.updateTime,"yyyy-MM-dd HH:mm"}</td>
         <td >
+            @if(user.userName != 'admin'){
             <a href="${ctxPath}/user/edit_user.html?userId=${user.userId}"><i class="glyphicon glyphicon-pencil"></i></a>
             &nbsp;&nbsp;
             <a href="${ctxPath}/user/del_user.html?userId=${user.userId}"><i class="glyphicon glyphicon-trash"></i></a>
+            @}
         </td>
     </tr>
     @}
