更新角色和用户对应关系

--- a/analyse-student/src/main/resources/templates/menu/add_menu.html
+++ b/analyse-student/src/main/resources/templates/menu/add_menu.html
@@ -28,7 +28,7 @@
                     <div class="form-group">
                         <label for="url" class="col-sm-3 control-label">类型：</label>
                         <div class="col-sm-8">
-                            <div class="radio i-checks">
+                            <div class="i-checks">
                                 <label>
                                     <input type="radio" checked="" value="1" name="folderType"> <i></i> 菜单</label>
 
