--- a/analyse-student/src/main/resources/templates/menu/edit_menu.html
+++ b/analyse-student/src/main/resources/templates/menu/edit_menu.html
@@ -29,7 +29,7 @@
                     <div class="form-group">
                         <label for="url" class="col-sm-3 control-label">类型：</label>
                         <div class="col-sm-8">
-                            <div class="radio i-checks">
+                            <div class="i-checks">
                                 <label>
                                     <input type="radio" @if(menu.folderType==1){
                                            checked @}
