--- a/analyse-student/src/main/resources/templates/user/add_user.html
+++ b/analyse-student/src/main/resources/templates/user/add_user.html
@@ -30,7 +30,7 @@
                     <div class="form-group">
                         <label for="sex" class="col-sm-3 control-label">性别：</label>
                         <div class="col-sm-8">
-                            <div class="radio i-checks" id="sex">
+                            <div class="i-checks" id="sex">
                                 <label><input type="radio" checked="" value="2" name="sex"> <i></i> 女</label>
 
                                 <label><input type="radio" value="1" name="sex"> <i></i> 男</label>
@@ -48,7 +48,9 @@
                         <div class="col-sm-8">
                             <select class="form-control" id="role_id" name="roleId">
                                 <option value="">请选择</option>
-
+                                @for(role in roles){
+                                    <option value="${role.roleId}">${role.roleName}</option>
+                                @}
                             </select>
                         </div>
                     </div>
