Beetl Shiro 标签注册

--- a/analyse-student/src/main/resources/templates/common/_left_menu.html
+++ b/analyse-student/src/main/resources/templates/common/_left_menu.html
@@ -4,6 +4,10 @@
         <span class="nav-label">首页</span>
     </a>
 </li>
+@if(so.hasRole('admin')){
+    有 admin role
+@}
+
 @for(menu in menus){
     <li>
         @if(isEmpty(menu.childFolders)){
