--- a/analyse-student/src/main/resources/templates/menu/index.html
+++ b/analyse-student/src/main/resources/templates/menu/index.html
@@ -6,9 +6,13 @@
                 @for(menu in menus){
                 <li class="dd-item" data-id="${menu.folderId}">
                         <span class="menu-opt-bar pull-right">
+                            @if(so.hasPermission("MENU_EDIT")){
                             <a href="${ctxPath}/menu/edit_menu.html?folderId=${menu.folderId}"><i class="glyphicon glyphicon-pencil"></i></a>
+                            @}
                             &nbsp;&nbsp;
+                            @if(so.hasPermission("MENU_DEL")){
                             <a href="${ctxPath}/menu/del_menu.html?folderId=${menu.folderId}"><i class="glyphicon glyphicon-trash"></i></a>
+                            @}
                         </span>
                     <div class="dd-handle">
                             <span class="@if(menu.icoStr!=''){
@@ -21,9 +25,13 @@
                         @for(child in menu.childFolders){
                         <li class="dd-item" data-id="${child.folderId}">
                                 <span class="menu-opt-bar pull-right">
+                                    @if(so.hasPermission("MENU_EDIT")){
                                     <a href="${ctxPath}/menu/edit_menu.html?folderId=${child.folderId}"><i class="glyphicon glyphicon-pencil"></i></a>
+                                    @}
                                 &nbsp;&nbsp;
+                                    @if(so.hasPermission("MENU_DEL")){
                                     <a href="${ctxPath}/menu/del_menu.html?folderId=${child.folderId}"><i class="glyphicon glyphicon-trash"></i></a>
+                                    @}
                                 </span>
                             <div class="dd-handle">
                                     <span class="@if(child.icoStr!=''){
@@ -38,8 +46,9 @@
                 </li>
                 @}
             </ol>
-
+            @if(so.hasPermission("MENU_ADD")){
             <a href="${ctxPath}/menu/add_menu.html" class="btn btn-sm btn-primary"><i class="fa fa-plus"></i> 添加</a>
+            @}
 
         </div>
 @}
