--- a/analyse-student/src/main/resources/templates/role/ajax_index.html
+++ b/analyse-student/src/main/resources/templates/role/ajax_index.html
@@ -23,11 +23,11 @@
         <td>${role.updateTime,"yyyy-MM-dd HH:mm"}</td>
         <td >
             @if(role.keyName != 'admin'){
-                @if(so.hasPermission("ROLE_EDIT")){
+                @if(so.hasPermission('ROLE_EDIT')){
                 <a href="${ctxPath}/role/edit_role.html?roleId=${role.roleId}"><i class="glyphicon glyphicon-pencil"></i></a>
                 @}
                 &nbsp;&nbsp;
-                @if(so.hasPermission("ROLE_DEL")){
+                @if(so.hasPermission('ROLE_DEL')){
                 <a href="${ctxPath}/role/del_role.html?roleId=${role.roleId}"><i class="glyphicon glyphicon-trash"></i></a>
                 @}
             @}
