--- a/analyse-student/src/main/resources/templates/user/index.html
+++ b/analyse-student/src/main/resources/templates/user/index.html
@@ -25,12 +25,12 @@
 
                             <a onclick="ajax_get_table('search-form',1)" class="btn btn-sm btn-primary"><i class="fa fa-search"></i> 搜索</a>
                             <div class="col-lg-2 pull-right text-right">
-                                @if(so.hasPermission("USER_ADD")){
+                                @if(so.hasPermission('USER_ADD')){
                                     <a href="${ctxPath}/user/add_user.html" class="btn btn-sm btn-primary"><i class="fa fa-plus"></i></a>
                                 @}
-                                @if(so.hasPermission("USER_BATCH_DEL")){
+                                @if(so.hasPermission('USER_BATCH_DEL')){
                                     <span id="batch_del" class="btn btn-sm btn-primary"><i class="fa fa-trash-o"></i></span>
-                                }
+                                @}
                             </div>
                         </div>
                         <div class="table-responsive" id="ajax_return">
