--- a/analyse-student/src/main/resources/templates/user/index.html
+++ b/analyse-student/src/main/resources/templates/user/index.html
@@ -45,7 +45,9 @@
 @}
 </body>
 <script type="text/javascript">
+    var cur_page=1;
     $(document).ready(function(){
+        console.log(cur_page);
         ajax_get_table('search-form',1);
     });
 
