忘记改了啥

--- a/analyse-student/src/main/resources/templates/user/ajax_index.html
+++ b/analyse-student/src/main/resources/templates/user/ajax_index.html
@@ -61,7 +61,7 @@
 <script>
     $(".pagination  a").click(function(){
         var page = $(this).data('p');
-        ajax_get_table('search-form2',page);
+        ajax_get_table('search-form',page);
     });
 
     $("#check_all").click(function () {
